--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="The Missing Solana Client"
+      content="Where the Lost Souls gather"
     />
-    <link rel="apple-touch-icon" href="/logo-custom.png" />
+    <link rel="apple-touch-icon" href="/logo512.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
-    <title>Better Call Sol</title>
+    <title>Lost Souls</title>
 
     <!-- polyfills -->
     <script>window.global = window;</script>
